[package]
name = "storaget"
description = "# Storage<T> file based in-memory database.\nStrongly MVP, big API changes are expected frequently.\nAs Storage<T> is rather experimental please do not use it for production."
version = "0.2.0"
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
license = "GPL-2.0"
homepage = "https://github.com/mezeipetister/storaget"
repository = "https://github.com/mezeipetister/storaget"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = "0.4.0"
rand = "0.7.2"
[dev-dependencies]
rand = "0.7.2"